@@ -22,17 +22,12 @@
   <!--no pjl--><!--No "text"?--></lang>
   <autodetect>
   <!--no known parport probe information--></autodetect>
-  <functionality>D</functionality>
-  <driver>drv_z42</driver>
+  <functionality>B</functionality>
+  <driver>gutenprint</driver>
   <!--not "unverified"--><!--no "contrib_url"-->
   <comments>
     <en>
     The printer is more or less compatible to the Z42, but faster.&lt;p&gt;
-
-    With the simple driver provided by Alwin Stolk one can at least
-    print in up to 600x600 dpi (the 1200x600 dpi provided by the
-    driver work only on the Z42). There is also preliminary support in
-    Gimp-Print 4.1.99rc1 or newer.&lt;p&gt;
     </en>
   </comments>
 </printer>
