@@ -6,8 +6,9 @@
 	* driver/gutenprint.xml: Updated printer list from last Gutenprint
 	  package, added Lexmark X73 and Compaq IJ1200.
 
-	* printer/Lexmark-X73.xml, printer/Compaq-IJ1200.xml: Set
-	  recommended driver to "gutenprint", text updates.
+	* printer/Lexmark-X73.xml, printer/Lexmark-Z43.xml,
+	  printer/Compaq-IJ1200.xml: Set recommended driver to
+	  "gutenprint", text updates.
 
 2006-12-18  Till Kamppeter <till.kamppeter@gmail.com>
 
